--- a/src/styles/Freelancer/UserProfile/Profile.css
+++ b/src/styles/Freelancer/UserProfile/Profile.css
@@ -1,3 +1,5 @@
+/* Profile.css */
+
 body {
     margin: 0;
     padding: 0;
@@ -16,18 +18,23 @@ body {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    padding: 60px 110px;
+    padding: 40px 80px;
     width: 100%;
     box-sizing: border-box;
+    overflow-y: auto;
 }
 
 .profile1 {
-    width: 59%;
+    width: 56%;
+}
+
+.profile2 {
+    width: 30%;
 }
 
 @media (max-width: 992px) {
     .second-section1 {
-        padding: 30px 10px;
+        padding: 30px 10px 30px 10px;
         flex-direction: column;
         align-items: center;
     }
@@ -40,15 +47,29 @@ body {
         flex-direction: column;
     }
 
-   
+    .profile2 {
+        width: 100%;
+        margin-top: 20px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
 }
 
 @media (max-width: 576px) {
     .second-section1 {
-        padding: 15px 20px;
+        padding: 15px 20px 30px 20px;
         flex-direction: column;
         align-items: center;
     }
 
-    
+    .profile2 {
+        width: 100%;
+        margin-top: 20px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
 }
