--- a/src/styles/Freelancer/UserProfile/Profile11.css
+++ b/src/styles/Freelancer/UserProfile/Profile11.css
@@ -2,7 +2,6 @@
     display: flex;
     flex-direction: row;
     width: 100%;
-    height: 25%;
     border: 1px solid #D6DDEB;
     padding: 20px;
     gap: 20px;
@@ -48,7 +47,6 @@
 }
 
 .openfor {
-    width: 95%;
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -60,9 +58,14 @@
     font-weight: 600;
 }
 
+.openfor p{
+    margin: 0;
+    font-size: 11px;
+
+}
 .openfor img {
-    height: 30px;
-    width: 30px;
+    height: 20px;
+    width: 20px;
 }
 
 .position {
