--- a/src/styles/Freelancer/Userauth/Login.css
+++ b/src/styles/Freelancer/Userauth/Login.css
@@ -1,12 +1,15 @@
 @import url('https://fonts.googleapis.com/css2?family=Epilogue:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+/*Login.css*/
 
-.main {
+.main4 {
     margin: auto;
     width: 70%;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    height: 100%;
+    overflow: auto; /* Enable scrolling for the main container */
 }
 
 .inputs {
@@ -28,13 +31,12 @@
     font-family: "Epilogue", sans-serif;
     font-size: 16px;
     padding-left: 20px;
-
 }
 
-.remember{
+.remember {
     display: flex;
     flex-direction: row;
-   align-items: center;
+    align-items: center;
     gap: 10px;
     margin-top: 35px;
     width: 65%;
@@ -43,25 +45,25 @@
     color: #515B6F;
 }
 
-.custom-checkbox{
+.custom-checkbox {
     width: 20px;
     height: 20px;
 }
+
 /* Media query for smaller screens */
 @media only screen and (max-width: 768px) {
-   
     .inputs {
         width: 100%;
-        
     }
 
-    .remember{
+    .remember {
         width: 100%;
     }
-
 }
 
 /* Media query for even smaller screens */
 @media only screen and (max-width: 480px) {
-
+    .main4 {
+        width: 90%; /* Adjust width for very small screens */
+    }
 }
