updated the routing part in main.js also upated navItem and navigation component for handling the routing of the components

--- a/src/styles/Freelancer/UserProfile/Profile.css
+++ b/src/styles/Freelancer/UserProfile/Profile.css
@@ -1,5 +1,3 @@
-/* Profile.css */
-
 .main2 {
     height: 100vh;
     display: flex;
@@ -8,14 +6,28 @@
     font-family: "Epilogue", sans-serif;
 }
 
-.second-section1 {
+.second-section-profile {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    padding: 40px 80px;
+    padding: 20px 70px;
     width: 100%;
     box-sizing: border-box;
     overflow-y: auto;
+
+    /* Hide scrollbar for Webkit browsers */
+    ::-webkit-scrollbar {
+        width: 0;
+        height: 0;
+    }
+
+    /* Hide scrollbar for other browsers */
+    -ms-overflow-style: none; /* Internet Explorer 10+ */
+    scrollbar-width: none; /* Firefox */
+}
+
+.second-section-profile::-webkit-scrollbar {
+    display: none; /* Safari and Chrome */
 }
 
 .profile1 {
@@ -27,7 +39,7 @@
 }
 
 @media (max-width: 992px) {
-    .second-section1 {
+    .second-section-profile {
         padding: 30px 10px 30px 10px;
         flex-direction: column;
         align-items: center;
@@ -52,7 +64,7 @@
 }
 
 @media (max-width: 576px) {
-    .second-section1 {
+    .second-section-profile {
         padding: 15px 20px 30px 20px;
         flex-direction: column;
         align-items: center;
