--- a/src/styles/Freelancer/UserProfile/Profile11.css
+++ b/src/styles/Freelancer/UserProfile/Profile11.css
@@ -4,7 +4,7 @@
     width: 100%;
     border: 1px solid #D6DDEB;
     padding: 20px;
-    gap: 20px;
+    gap: 14px;
     border-radius: 16px;
 }
 
@@ -93,6 +93,23 @@
     white-space: nowrap;
     margin-left: 40px;
     cursor: pointer;
+}
+
+@media (max-width: 1080px) {
+   .edit{
+    margin-left: 20px;
+   }
+
+   .openfor p{
+    font-size: 8px;
+
+}
+.openfor img {
+    height: 15px;
+    width: 15px;
+}
+
+   
 }
 
 
