--- a/src/styles/Company/About/CompanyOverview.css
+++ b/src/styles/Company/About/CompanyOverview.css
@@ -17,8 +17,8 @@
   }
 
   .companyLogo {
-    width: 100px;
-    height: 100px;
+    width: 125px;
+    height: 125px;
     margin-right: 20px;
   }
 
@@ -85,11 +85,9 @@
   }
 
   .editBtnAbsolute {
-    position: absolute;
     background-color: #fff;
     border: solid #D6DDEB 1px;
-    padding: 3px;
-    margin: 0px 4px;
-    
+    margin: 0px 0px 0px 8px;
+    padding: 4px;
   }
 }
