--- a/src/styles/Company/About/Contact.css
+++ b/src/styles/Company/About/Contact.css
@@ -8,7 +8,7 @@
       box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     }
 
-  .titleBar{
+  .ct-titleBar{
     display: flex;
     justify-content: space-between;
     align-items: center; 
