--- a/src/styles/Company/Applicants/ApplicantsView.css
+++ b/src/styles/Company/Applicants/ApplicantsView.css
@@ -3,6 +3,7 @@
         /* border: solid black 1px; */
         padding: 16px 8px;
         margin-right: 8px;
+        margin-bottom: 36px;
     }
 
     .av-inner-container-1 {
