--- a/src/styles/Company/PostTask/PostForm2.css
+++ b/src/styles/Company/PostTask/PostForm2.css
@@ -51,6 +51,16 @@
         padding: 12px 16px;
     }
 
+    .emo-container button {
+        outline: none;
+        border: 0;
+        background: transparent;
+    }
+
+    .emo-container button:active {
+        background-color: #AAA;
+    }
+
     .pf-mc-container {
         width: 400px;
         padding: 2px 16px;
