updated applicant listing

--- a/src/styles/Company/Applicants/ApplicantsView.css
+++ b/src/styles/Company/Applicants/ApplicantsView.css
@@ -62,7 +62,7 @@
         padding: 0px 12px;
         /* border: 1px solid black; */
         display: grid;
-        grid-template-columns: 1fr 1fr 1fr 1fr;
+        grid-template-columns: 1fr 1fr 1fr;
         column-gap: 16px;
     }
 }
